Compile fixes for latest PRISM master.